# phosphor

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
scripts/: check.ps1
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/cards/: types.rs
src-tauri/src/commands/: blank.rs  device.rs  erase.rs  firmware.rs  hf_clone.rs  history.rs  mod.rs  raw.rs  saved.rs  scan.rs  wizard.rs  write.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/pm3/: command_builder.rs  connection.rs  mod.rs  output_parser.rs  version.rs
src/components/erase/: EraseView.tsx
src/components/history/: HistoryView.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx  StatusBar.tsx  TopBar.tsx
src/components/matrix/: BootSequence.tsx  CrtOverlay.tsx  MatrixRain.tsx
src/components/saved/: SavedView.tsx
src/components/settings/: SettingsView.tsx
src/components/shared/: GlitchWatermark.tsx  LiveTerminal.tsx  OperationLog.tsx  ProgressBar.tsx  StepIndicator.tsx  TerminalPanel.tsx
src/components/wizard/: BlankStep.tsx  CompleteStep.tsx  ConnectStep.tsx  ErrorStep.tsx  FirmwareUpdateStep.tsx  HfDumpReadyStep.tsx  HfProcessStep.tsx  ScanStep.tsx  (+3 more)
src/hooks/: WizardProvider.tsx  useDeviceStatus.ts  useMusic.ts  usePm3.ts  useSettings.tsx  useSfx.ts  useTerminalLog.tsx  useTypewriter.ts  useWizard.ts
src/lib/: api.ts  cardTypes.ts  constants.ts
src/machines/: types.ts  wizardMachine.ts
src/styles/: globals.css
