[package]
name = "phosphor"
version = "0.1.0"
description = "Proxmark3 GUI for One-Click Fob Cloning"
authors = ["nik shuv"]
license = "GPL-3.0-only"
edition = "2021"

[lib]
name = "phosphor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"

