[package]
name = "phosphor"
version = "1.1.0"
description = "Proxmark3 GUI for One-Click Fob Cloning"
authors = ["nik shuv"]
license = "GPL-3.0-only"
edition = "2021"

[lib]
name = "phosphor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = [] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-shell = "2.3.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rusqlite = { version = "0.31.0", features = ["bundled"] }
regex = "1.12.3"
tokio = { version = "1.49.0", features = ["full"] }
log = "0.4.29"
env_logger = "0.11.8"
thiserror = "1.0.69"
chrono = { version = "0.4.43", features = ["serde"] }

